SFDCProject/src/objects/Quality_Inspection__c.object
<CustomObject>
    <description>Tracks results of quality inspections performed on individual systems</description>
    <fields>
        <fullName>AC_DC_Disconnects_Score__c</fullName>
        <label>AC/DC Disconnects Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_Inspection_Est_Yr_1_Generation__c</fullName>
        <formula>Inspection_Yr_1_Generation__c * Production_Est_Source_Adj_Ration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adj Inspection Est Yr 1 Generation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conduit_Runs_Score__c</fullName>
        <label>Conduit Runs Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Yr_1_Generation__c</fullName>
        <formula>Generation_Asset__r.Est_Yr_1_Generation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Yr 1 Generation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generation_Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Generation Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipLabel>Quality Inspections</relationshipLabel>
        <relationshipName>Quality_Inspections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspection_Cost__c</fullName>
        <label>Inspection Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Firm__c</fullName>
        <label>Inspection Firm</label>
        <picklist>
            <picklistValues>
                <fullName>Burnham Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Tech Measure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_PTO_Month__c</fullName>
        <formula>Generation_Asset__r.PTO_month__c</formula>
        <label>Inspection PTO Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Yr_1_Generation__c</fullName>
        <label>Inspection Yr 1 Generation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Score__c</fullName>
        <label>Inverter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modules_Score__c</fullName>
        <label>Modules Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_from_Inspection__c</fullName>
        <label>Notes from Inspection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Electrical_Score__c</fullName>
        <label>Other Electrical Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Structural_Score__c</fullName>
        <label>Other Structural Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_System_Labeling_Score__c</fullName>
        <label>PV System Labeling Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Production_Grade__c</fullName>
        <formula>if( ABS( Variance__c )&lt;0.02,2,(if(and(abs( Variance__c )&gt;0.02,abs( Variance__c )&lt;=0.05),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Production Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Est_Source_Adj_Ration__c</fullName>
        <formula>Generation_Asset__r.Production_Estimate_Source_Adjust_Ratio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Est Source Adj Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Racking_System_Score__c</fullName>
        <label>Racking System Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Score__c</fullName>
        <label>Roof Condition Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Flashing_Score__c</fullName>
        <label>Roof Flashing Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Penetrations_Score__c</fullName>
        <label>Roof Penetrations Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Quality Inspections</relationshipLabel>
        <relationshipName>Quality_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Inspection_Score__c</fullName>
        <formula>Racking_System_Score__c +Roof_Condition_Score__c + Roof_Flashing_Score__c + Roof_Penetrations_Score__c+ Conduit_Runs_Score__c + Other_Structural_Score__c+ Inverter_Score__c + Wire_Inspection_Score__c + Modules_Score__c + AC_DC_Disconnects_Score__c + PV_System_Labeling_Score__c + Other_Electrical_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Inspection Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>( Est_Yr_1_Generation__c - Adj_Inspection_Est_Yr_1_Generation__c )/ Adj_Inspection_Est_Yr_1_Generation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wire_Inspection_Score__c</fullName>
        <label>Wire Management Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Inspection</label>
    <nameField>
        <displayFormat>QI-{00000000}</displayFormat>
        <label>Quality Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>